Feature/adds camera recording to lecturePresenter
- CameraRecordingConfiguration: Adds a new class, which holds the configurations for the camera recording. Including properties like the name, format and codec.
- CameraRecordingException: Adds a new exception class.
- CameraRecordingService: Adds a new class, which manages the current state of the camera recording process, including the initialization of a muxer.
- dict_de_DE: adds translation.
- dict_de_US: adds translation.
- PresenterConfiguration: adds CameraRecordingConfiguration.
- RecordingService: Integrates the CameraRecordingService into the RecordingService.
- start-recording: adds UI components.
- start-recording_de_DE: adds translation.
- start-recording_en_US: adds translation.
- StartRecordingPresenter: adds camera recording and disposal for recording and preview purposes.
- StartRecordingView: adds interface methods.
- SwingMainView: fixes tooltip popup weight.
- SwingStartRecordingView: Adds a camera selection box and a camera preview panel for the UI together with their corresponding controllers.
- ToolbarPresenter: Integrates the CameraRecordingService into the "startRecording" function, which is called on pressing the record button of the toolbar.
- WebRtcStreamService: Integrates WebRTC into recordingService.

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -27,6 +27,8 @@ recording.stop.confirm.message = M\u00f6chten Sie die Aufzeichnung beenden?
 recording.stop.error = Aufzeichnung konnte nicht gestoppt werden
 recording.save.error = Aufzeichnung konnte nicht gespeichert werden
 recording.pause.error = Aufzeichnung konnte nicht pausiert werden
+recording.webcam.start.error = Kamera-Aufzeichnung konnte nicht gestartet werden
+recording.error = Fehler in der Aufzeichnung
 
 stream.starting = Der Stream wird gestartet
 stream.start.error = Stream konnte nicht gestartet werden
