--- a/lect-presenter-swing/src/main/resources/views/start-recording/start-recording_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-recording/start-recording_en_US.properties
@@ -1,6 +1,11 @@
 start.recording.microphone = Microphone
 start.recording.speaker = Speakers
 start.recording.start = Start
+start.stream.camera = Camera
+start.stream.camera.enable = Enable camera
+start.stream.camera.starting = Starting...
+start.stream.camera.unavailable = Camera is not available
+toolbar.stream.camera.tooltip = Toggle camera
 start.recording.test.title = Test Capture
 start.recording.test.capture = Capture
 start.recording.test.playback = Playback
