--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -27,6 +27,8 @@ recording.stop.confirm.message = Do you want to stop recording?
 recording.stop.error = Recording could not be stopped
 recording.save.error = Recording could not be saved
 recording.pause.error = Recording could not be paused
+recording.webcam.start.error = Camera recording could not be started
+recording.error = Recording error
 
 stream.starting = Starting stream
 stream.start.error = Stream could not be started
