--- a/lect-presenter-swing/src/main/resources/views/start-recording/start-recording_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-recording/start-recording_de_DE.properties
@@ -1,6 +1,11 @@
 start.recording.microphone = Mikrofon
 start.recording.speaker = Lautsprecher
 start.recording.start = Start
+start.stream.camera = Kamera
+start.stream.camera.enable = Kamera aktivieren
+start.stream.camera.starting = Starte...
+start.stream.camera.unavailable = Kamera ist nicht verf\u00fcgbar
+toolbar.stream.camera.tooltip = Kamera ein/-ausschalten
 start.recording.test.title = Aufnahme Testen
 start.recording.test.capture = Aufnahme
 start.recording.test.playback = Wiedergabe
