added menu to switch modes

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -28,6 +28,7 @@ menu.preview.position = Position der Folienvorschau
 menu.left = Links
 menu.bottom = Unten
 menu.right = Rechts
+menu.none = Ohne
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Whiteboard erstellen
 menu.grid = Gitternetz ein/ausschalten
@@ -64,3 +65,4 @@ menu.about = \u00DCber
 menu.stopwatch.stop = Stoppuhr zurücksetzen
 menu.stopwatch.pause = Stoppuhr Starten/Anhalten
 menu.stopwatch.config = Stoppuhr Einstellungen
+menu.splitNotes.position = Folie teilen
