--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -28,6 +28,7 @@ menu.preview.position = Slide preview position
 menu.left = Left
 menu.bottom = Bottom
 menu.right = Right
+menu.none = None
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Create whiteboard
 menu.grid = Switch grid on/off
@@ -64,3 +65,4 @@ menu.about = About
 menu.stopwatch.stop = reset stopwatch
 menu.stopwatch.pause = start/pause stopwatch
 menu.stopwatch.config = Stopwatch configuration
+menu.splitNotes.position = split slide
