--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -59,6 +59,7 @@ menu.quiz.embedded = Eingebettete Quizzes
 menu.bookmarks = Lesezeichen
 menu.bookmarks.clear = Alle Lesezeichen l\u00F6schen
 menu.bookmarks.add = Aktuelle Folie als Lesezeichen
+menu.bookmarks.add.default = Aktuelle Folie als Lesezeichen (Default shortcut)
 menu.bookmarks.previous = Zur\u00FCck zur letzten Position
 menu.bookmarks.goto = Lesezeichen anspringen
 menu.slide.actions = Folienlinks
@@ -67,3 +68,5 @@ menu.about = \u00DCber
 menu.stopwatch.stop = Stoppuhr zurücksetzen
 menu.stopwatch.pause = Stoppuhr Starten/Anhalten
 menu.stopwatch.config = Stoppuhr Einstellungen
+menu.bookmarks.prev = Zum vorherigen Lesezeichen springen
+menu.bookmarks.next = Zum nächsten Lesezeichen springen
