--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
@@ -27,6 +27,9 @@ toolbar.clone.tooltip = Kopier-Werkzeug ausw\u00E4hlen
 toolbar.erase.tooltip = Radiergummi ausw\u00E4hlen
 toolbar.latex.tooltip = LaTeX-Werkzeug ausw\u00E4hlen
 toolbar.text.tooltip = Textwerkzeug ausw\u00E4hlen
+toolbar.bookmark.prev.tooltip = Zu vorherigem Lesezeichen Springen
+toolbar.bookmark.next.tooltip = Zu nächstem Lesezeichen Springen
+toolbar.bookmark.add.tooltip = Lesezeichen hinzufügen
 toolbar.text.select.tooltip = Textauswahlwerkzeug ausw\u00E4hlen
 toolbar.clear.tooltip = L\u00F6sche alle Texte und Linien
 toolbar.extend.tooltip = Zeichenbereich erweitern
