--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
@@ -27,6 +27,9 @@ toolbar.clone.tooltip = Select copy tool
 toolbar.erase.tooltip = Select eraser
 toolbar.latex.tooltip = Select LaTeX tool
 toolbar.text.tooltip = Select text tool
+toolbar.bookmark.prev.tooltip = Jump to previous bookmark
+toolbar.bookmark.next.tooltip = Jump to next bookmark
+toolbar.bookmark.add.tooltip = Create bookmark
 toolbar.text.select.tooltip = Select text selection tool
 toolbar.clear.tooltip = Delete all annotations
 toolbar.extend.tooltip = Extend drawing area
