--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -58,6 +58,7 @@ menu.quiz.embedded = Embedded quizzes
 menu.bookmarks = Bookmarks
 menu.bookmarks.clear = Delete all bookmarks
 menu.bookmarks.add = Bookmark current slide
+menu.bookmarks.add.default = Bookmark current slide (Default shortcut)
 menu.bookmarks.previous = Go back to previous bookmark
 menu.bookmarks.goto = Go to bookmark
 menu.slide.actions = Slide Links
@@ -66,3 +67,5 @@ menu.about = About
 menu.stopwatch.stop = reset stopwatch
 menu.stopwatch.pause = start/pause stopwatch
 menu.stopwatch.config = Stopwatch configuration
+menu.bookmarks.prev = Go to previous bookmark
+menu.bookmarks.next = Go to next bookmark
