improved toolbar actions for bookmark navigation

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -1,4 +1,4 @@
-bookmark.assign.error = Lesezeichen konnte nicht erstellt werden
+bookmark.assign.warning = Lesezeichen konnte nicht erstellt werden
 bookmark.delete.error = Lesezeichen konnte nicht gel\u00f6scht werden
 bookmark.goto.error = Lesezeichen konnte nicht angesprungen werden
 bookmark.key.exists = Ein Lesezeichen mit der Taste {0} existiert bereits
