--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -1,4 +1,4 @@
-bookmark.assign.error = Bookmark could not be created
+bookmark.assign.warning = Bookmark could not be created
 bookmark.delete.error = Bookmark could not be deleted
 bookmark.goto.error = Bookmark could not be opened
 bookmark.key.exists = A bookmark with the key {0} already exists
