--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -60,6 +60,7 @@ message.slide.create.error = Nachrichtenfolie konnte nicht erstellt werden
 
 service.timeout.error = Der Dienst ist derzeit nicht verf\u00fcgbar. Sollte der Fehler dauerhaft auftreten, so wenden Sie sich bitte an den Administrator ihres Vertrauens.
 
+open.document = Dokument wird geladen
 open.document.error = Dokument konnte nicht ge\u00f6ffnet werden
 open.page.file.error = Die Datei konnte nicht ge\u00f6ffnet werden
 open.page.uri.error = Der Link konnte nicht ge\u00f6ffnet werden
