core: extended PlaybackAction with functions to retrieve handles and get modify the location
core: moved functionality from presenter-api into core for reusability, moved error handling dialog from presenter to ApplicationContext for reusability

editor-api: added new functionality to record annotations in the lectureEditor

editor-api: added TextTool to add Text at specific time points, as well as changing its properties

editor-api: added SelectionTool, to modify the location of PlaybackAction during editing

editor-api: added tests

editor-fx: added the ui components needed to use the new functionality of recording annotations in the lectureEditor

editor-fx: added shortcuts for pause/play and moving the current timestamp forwards/backwards according to the current zoom level

editor-fx: added "jump to annotation" with PageEventsView

javafx: added the stylus listener and extended the views and controls to record annotations

javafx: fixed auto sizing of the TextBoxSkin when changing font/-size/-color

presenter-api: added missing resources property

media: added new event types for finer granularity in event handling

--- a/lect-editor-fx/src/main/resources/views/page-events/page-events_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/page-events/page-events_de_DE.properties
@@ -3,6 +3,7 @@ page.events.event = Ereignis
 page.events.time = Zeitpunkt
 page.events.delete = Annotation l\u00f6schen
 page.events.delete.error = Annotation konnte nicht gel\u00f6scht werden
+page.events.seek.error = Unerwarteter Fehler beim Auswählen des Abspielzeitpunktes
 
 page.events.undo = Letzte Aktion entfernen
 page.events.redo = Aktion wieder ausf\u00fchren
