--- a/lect-editor-fx/src/main/resources/views/page-events/page-events_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/page-events/page-events_en_US.properties
@@ -3,6 +3,7 @@ page.events.event = Event
 page.events.time = Time
 page.events.delete = Delete annotation
 page.events.delete.error = Annotation could not be deleted
+page.events.seek.error = Unexpected error while jumping to the selected timestamp.
 
 page.events.undo = Undo
 page.events.redo = Redo
