--- a/lect-javafx/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-javafx/src/main/resources/i18n/dict_de_DE.properties
@@ -24,8 +24,8 @@ dark = Dunkel
 grey = Grau
 
 ## Stroke width
-stroke.extra_small = Extra klein
-stroke.small = Klein
+stroke.extra_small = Dünner
+stroke.small = Dünn
 stroke.medium = Normal
-stroke.big = Groß
-stroke.extra_big = Extra groß
+stroke.big = Dick
+stroke.extra_big = Dicker
