--- a/lect-javafx/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-javafx/src/main/resources/i18n/dict_en_US.properties
@@ -24,8 +24,8 @@ dark = Dark
 grey = Grey
 
 ## Stroke width
-stroke.extra_small = Extra small
-stroke.small = Small
-stroke.medium = Medium
-stroke.big = Big
-stroke.extra_big = Extra big
+stroke.extra_small = Thinner
+stroke.small = Thin
+stroke.medium = Normal
+stroke.big = Thick
+stroke.extra_big = Thicker
