editor: small fix to show icons and text correctly in page events list

--- a/lect-editor-fx/src/main/resources/views/page-events/page-events_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/page-events/page-events_de_DE.properties
@@ -20,6 +20,7 @@ page.events.rubber = Radiergummi
 page.events.latex = LaTeX
 page.events.text = Text
 page.events.text.selection = Textauswahl
+page.events.text.selection.ext = Textauswahl
 page.events.delete.all = Aufr\u00e4umen
 page.events.extend.view = Zeichenbereich erweitern
 page.events.zoom = Einzoomen
