--- a/lect-editor-fx/src/main/resources/views/page-events/page-events_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/page-events/page-events_en_US.properties
@@ -20,6 +20,7 @@ page.events.rubber = Erase
 page.events.latex = LaTeX
 page.events.text = Text
 page.events.text.selection = Text selection
+page.events.text.selection.ext = Text selection
 page.events.delete.all = Clear
 page.events.extend.view = Extend drawing area
 page.events.zoom = Zoom in
