added new Tab and external window for note slide

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -14,7 +14,8 @@ menu.fullscreen = Fullscreen
 menu.advanced.settings = Advanced settings
 menu.toolbar.customize = Customize toolbar
 menu.external.windows = External windows
-menu.external.annotations = Notes
+menu.external.notes = Notes
+menu.external.slide.notes = Slide notes
 menu.external.messages = Messages
 menu.external.messages.disconnected = Messages (Display disconnected)
 menu.external.participants = Participants
@@ -25,6 +26,7 @@ menu.external.speech = Speech
 menu.external.speech.disconnected = Speech (Display disconnected)
 menu.messages.position = Messages position
 menu.notes.position = Notes position
+menu.slide.notes.position = Slide notes position
 menu.participants.position = Participants position
 menu.preview.position = Slide preview position
 menu.left = Left
@@ -67,4 +69,4 @@ menu.about = About
 menu.stopwatch.stop = reset stopwatch
 menu.stopwatch.pause = start/pause stopwatch
 menu.stopwatch.config = Stopwatch configuration
-menu.splitNotes.position = split slide
+menu.splitNotes.position = Notes slide
