--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -11,6 +11,7 @@ slides.slide.preview = Folienvorschau
 slides.speech = Redebeitrag
 slides.currently.no.speech = Aktuell kein Redebeitrag
 slides.quiz.stop = Beenden
+slides.slide.notes = Folien Notizen
 
 speech.requested = hat sich gemeldet
 speech.accept = Annehmen
