--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -11,6 +11,7 @@ slides.slide.preview = Slides preview
 slides.speech = Speech
 slides.currently.no.speech = Currently no speach
 slides.quiz.stop = Stop
+slides.slide.notes = Slide notes
 
 speech.requested = raised his hand
 speech.accept = Accept
