--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -59,7 +59,7 @@ menu.quiz.embedded = Eingebettete Quizzes
 menu.bookmarks = Lesezeichen
 menu.bookmarks.clear = Alle Lesezeichen l\u00F6schen
 menu.bookmarks.add = Aktuelle Folie als Lesezeichen
-menu.bookmarks.add.default = Aktuelle Folie als Lesezeichen (Default shortcut)
+menu.bookmarks.add.default = Aktuelle Folie als Lesezeichen (Standard-Kürzel)
 menu.bookmarks.previous = Zur\u00FCck zur letzten Position
 menu.bookmarks.goto = Lesezeichen anspringen
 menu.slide.actions = Folienlinks
