added icons and remove bookmark toolbar button

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -58,6 +58,7 @@ menu.quiz.embedded = Embedded quizzes
 menu.bookmarks = Bookmarks
 menu.bookmarks.clear = Delete all bookmarks
 menu.bookmarks.add = Bookmark current slide
+menu.bookmarks.remove = Remove bookmark current slide
 menu.bookmarks.add.default = Bookmark current slide (default shortcut)
 menu.bookmarks.previous = Go back to previous bookmark
 menu.bookmarks.goto = Go to bookmark
