--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -2,9 +2,10 @@ bookmark.assign.warning = Lesezeichen konnte nicht erstellt werden
 bookmark.delete.error = Lesezeichen konnte nicht gel\u00f6scht werden
 bookmark.goto.error = Lesezeichen konnte nicht angesprungen werden
 bookmark.key.exists = Ein Lesezeichen mit der Taste {0} existiert bereits
-bookmark.exists = Ein Lesezeichen auf der aktuellen Seite existiert bereits
+bookmark.exists = Ein Lesezeichen auf Seite {0} existiert bereits
 bookmark.key.not.existing = Ein Lesezeichen mit der Taste {0} existiert nicht
 bookmark.created = Neues Lesezeichen erstellt: {0}
+bookmark.removed = Lesezeichen gelöscht: {0}
 
 document.save.error = Dokument konnte nicht gespeichert werden
 document.save.lecture = Vorlesung
