editor: added audio loudness normalization editor: added adjust audio loudness functionality when importing recordings editor: made new document in ReplacePageView searchable editor: added new shortcuts editor: added functionality of exporting current pdf page editor: improved view of page events editor: fixes of wrong usage of ProgressDialogView to prevent unusability of editor in error case

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -11,6 +11,9 @@ hide.page.notification.close = Abbrechen
 export.audio = Audio exportieren
 export.audio.error = Audio konnte nicht exportiert werden
 import.audio.error = Audio konnte nicht importiert werden
+import.recording = Aufzeichnung wird importiert
+import.recording.success = Aufzeichnung wurde erfolgreich importiert
+import.recording.error = Aufzeichnung konnte nicht importiert werden
 recording.playback.error = Bei der Wiedergabe der Aufzeichnung ist ein Fehler aufgetreten
 recording.render.audio = Audio Rendering
 recording.render.video = Video Rendering
@@ -28,11 +31,17 @@ noise.reduction.cancel.error = Rauschunterdr\u00fcckung konnte nicht abgebrochen
 noise.reduction.finished = Rauschunterdr\u00fcckung abgeschlossen
 noise.reduction.profile.error = Markiertes Zeitintervall konnte nicht als Stille definiert werden
 noise.reduction.profile.min.error = Bitte im Zeitbalken einen stillen Bereich (ohne Vortrag) l\u00e4nger als {0}ms definieren
+normalize.loudness.audio = Lautheit wird normalisiert
+normalize.loudness.audio.success = Lautheit wurde erfolgreich normalisiert
+normalize.loudness.audio.error = Lautheit konnte nicht normalisiert werden
 open.recording = Aufzeichnung wird geladen
 open.recording.error = Aufzeichnung konnte nicht ge\u00f6ffnet werden
 save.document.title = Dokument wird geschrieben
 save.document.success = Dokument wurde erfolgreich geschrieben
 save.document.error = Dokument konnte nicht gespeichert werden
+save.page.current.title = Aktuelle Seite wird geschrieben
+save.page.current.success = Aktuelle Seite wurde erfolgreich geschrieben
+save.page.current.error = Aktuelle Seite konnte nicht gespeichert werden
 save.recording = Aufzeichnung wird geschrieben
 save.recording.success = Aufzeichnung wurde erfolgreich geschrieben
 save.recording.error = Aufzeichnung konnte nicht gespeichert werden
