--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -11,6 +11,9 @@ hide.page.notification.close = Discard
 export.audio = Export audio
 export.audio.error = Audio could not be exported
 import.audio.error = Audio could not be imported
+import.recording = Recording is being imported
+import.recording.success = Recording was successfully imported
+import.recording.error = Recording could not be imported
 recording.playback.error = An error occurred while playing back the recording
 recording.render.audio = Audio Rendering
 recording.render.video = Video Rendering
@@ -28,11 +31,17 @@ noise.reduction.cancel.error = Noise reduction could not be canceled
 noise.reduction.finished = Noise reduction is complete
 noise.reduction.profile.error = Selected time interval could not be defined as silence
 noise.reduction.profile.min.error = Please define a quiet area (without speech) with the length of at least {0}ms with the time bars
+normalize.loudness.audio = Loudness is being normalized
+normalize.loudness.audio.success = Loudness was normalized successfully
+normalize.loudness.audio.error = Loudness could not be normalized
 open.recording = Recording is loading
 open.recording.error = Recording could not be opened
 save.document.title = Saving document
 save.document.success = Document has been successfully saved
 save.document.error = Document could not be saved
+save.page.current.title = Saving current page
+save.page.current.success = Current page has been successfully saved
+save.page.current.error = Current page could not be saved
 save.recording = Recording is being written
 save.recording.success = Recording was successfully written
 save.recording.error = Recording could not be saved
