--- a/lect-editor-fx/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -7,6 +7,7 @@ menu.close = Schlie\u00dfen
 menu.cut = Ausschneiden
 menu.delete.page = Aktuelle Seite entfernen
 menu.save.document = Dokument abspeichern
+menu.save.page.current = Aktuelle Seite abspeichern
 menu.save.as = Speichern unter...
 menu.export.audio = Audio exportieren
 menu.import.audio = Audio importieren
@@ -17,3 +18,5 @@ menu.fullscreen = Vollbild
 menu.options = Einstellungen
 menu.log = Log
 menu.about = \u00dcber
+menu.audio = Audioeffekte
+menu.audio.normalize.loudness = Lautheit Normalisierung
