--- a/lect-editor-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -7,6 +7,7 @@ menu.close = Close
 menu.cut = Cut
 menu.delete.page = Delete current page
 menu.save.document = Save document
+menu.save.page.current = Save current page
 menu.save.as = Save As...
 menu.export.audio = Export audio
 menu.import.audio = Import audio
@@ -17,3 +18,5 @@ menu.fullscreen = Fullscreen
 menu.options = Settings
 menu.log = Log
 menu.about = About
+menu.audio = Audio Effects
+menu.audio.normalize.loudness = Loudness Normalization
