--- a/lect-editor-fx/src/main/resources/views/page-replace/page-replace_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/page-replace/page-replace_de_DE.properties
@@ -10,3 +10,4 @@ page.replace.currentPage = Ausgewählte Seite ersetzen
 page.replace.allPages = Alle Seiten ersetzen
 page.replace.currentPage.info = Diese Option wählt nach dem Ersetzen automatisch die nächste Seite beider Dokumente aus.
 page.replace.allPages.info = Diese Option kann nur ausgewählt werden, wenn beide Dokumente die gleiche Seitenanzahl haben.
+page.replace.search = Dokument durchsuchen
