--- a/lect-editor-fx/src/main/resources/views/page-replace/page-replace_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/page-replace/page-replace_en_US.properties
@@ -10,3 +10,4 @@ page.replace.currentPage = Replace Selected Page
 page.replace.allPages = Replace All Pages
 page.replace.currentPage.info = This option replaces the selected page and afterwards selects the next page of both documents.
 page.replace.allPages.info = This option can only be selected, if both documents contain the same number of pages.
+page.replace.search = Search document
