editor: Fixes to texts, placing of new loudness normalization feature, and shortcut

--- a/lect-editor-fx/src/main/resources/views/audio-effects/audio-effects_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/audio-effects/audio-effects_de_DE.properties
@@ -1,3 +1,4 @@
+audio.effects.title = Audioeffekte
 audio.noise.reduction.settings.title = Rauschunterdr\u00fcckung
 audio.noise.reduction.settings.audio.snippet = Audio-Ausschnitt
 audio.noise.reduction.settings.audio.snippet.update = Audio-Ausschnitt auf aktuelle Zeitmarker-Position setzen
@@ -10,3 +11,5 @@ audio.noise.reduction.settings.play.audio.snippet = Abspielen
 audio.noise.reduction.settings.stop.audio.snippet = Stoppen
 audio.noise.reduction.settings.profile = Markiertes Zeitintervall als Stille definieren
 audio.noise.reduction.settings.sensitivity = Empfindlichkeit
+
+audio.loudness.normalize.title = Lautheit-Normalisierung
