--- a/lect-editor-fx/src/main/resources/views/audio-effects/audio-effects_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/audio-effects/audio-effects_en_US.properties
@@ -1,3 +1,4 @@
+audio.effects.title = Audio effects
 audio.noise.reduction.settings.title = Noise Reduction
 audio.noise.reduction.settings.audio.snippet = Audio snippet
 audio.noise.reduction.settings.audio.snippet.update = Set the audio snippet to the current time marker position
@@ -10,3 +11,5 @@ audio.noise.reduction.settings.play.audio.snippet = Play
 audio.noise.reduction.settings.stop.audio.snippet = Stop
 audio.noise.reduction.settings.profile = Define selected time interval as silence
 audio.noise.reduction.settings.sensitivity = Sensitivity
+
+audio.loudness.normalize.title = Loudness Normalization
