--- a/lect-editor-fx/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -2,5 +2,5 @@ slides.delete.page = Seite entfernen
 slides.notes = Notizen
 slides.latex = LaTeX
 slides.create.video = Als Video exportieren
-slides.noise.reduction = Rauschunterdr\u00fcckung
+slides.audio.effects = Audioeffekte
 slides.page.events = Seitenereignisse
