--- a/lect-editor-fx/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -2,5 +2,5 @@ slides.delete.page = Delete Page
 slides.notes = Notes
 slides.latex = LaTeX
 slides.create.video = Export as video
-slides.noise.reduction = Noise Reduction
+slides.audio.effects = Audio effects
 slides.page.events = Page events
