Added JCEF to view streams. Separated code into individual handlers.

--- a/lect-presenter-swing/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/i18n/dict_de_DE.properties
@@ -99,3 +99,5 @@ editor.table_properties = Eigenschaften
 editor.table_properties_desc = Tabelle Bearbeiten
 editor.hide = In Ergebnissen nicht anzeigen
 editor.browse = Durchsuchen...
+loading.jcef = Lade Java Chromium Embedded Framework (JCEF)
+loading.jcef.description = Der eingebettete Chromium-basierte Browser wird nur einmal heruntergeladen. Das kann ein paar Minuten dauern.
