--- a/lect-presenter-swing/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/i18n/dict_en_US.properties
@@ -99,3 +99,5 @@ editor.table_properties = Properties
 editor.table_properties_desc = Edit Table
 editor.hide = Don't show in results
 editor.browse = Browse...
+loading.jcef = Loading Java Chromium Embedded Framework (JCEF)
+loading.jcef.description = The embedded Chromium-based browser is downloaded only once. It can take a few minutes.
