--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -45,6 +45,7 @@ menu.stream.stop = Stream stoppen
 menu.stream.online = Stream online
 menu.stream.offline = Stream offline
 menu.stream.slow = Langsame Stream-Verbindung
+menu.stream.view = Stream ansehen
 menu.stream.microphone.start = Mikrofon f\u00FCr Stream einschalten
 menu.stream.microphone.stop = Mikrofon f\u00FCr Stream ausschalten
 menu.stream.camera.start = Kamera f\u00FCr Stream einschalten
