--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -45,6 +45,7 @@ menu.stream.stop = Stop stream
 menu.stream.online = Stream online
 menu.stream.offline = Stream offline
 menu.stream.slow = Slow stream connection
+menu.stream.view = View stream
 menu.stream.microphone.start = Turn microphone on for stream
 menu.stream.microphone.stop = Turn microphone off for stream
 menu.stream.camera.start = Turn camera on for stream
