--- a/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_en_US.properties
@@ -7,6 +7,7 @@ start.stream.camera.enable = Enable camera
 start.stream.camera.starting = Starting...
 start.stream.camera.unavailable = Camera is not available
 start.stream.messenger.enable = Enable messenger
+start.stream.preview = View stream
 start.stream.start = Start
 start.stream.settings = Settings
 start.stream.service.error = Cannot load courses. Please check the access token in the settings.
