presenter-swing: added option to disable pen input and use mouse instead

--- a/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_en_US.properties
@@ -9,5 +9,6 @@ general.settings.language.notify.title = Display language changed
 general.settings.language.notify.message = The change will not take effect until you restart {0}.
 general.settings.check.version = Check for new versions
 general.settings.start.fullscreen = Start in fullscreen mode
+general.settings.mouse.input = Activate mouse input if, for example, there are problems with the pen input
 general.settings.start.maximized = Start maximized
 general.settings.tablet.mode = Tablet mode (Windows)
