--- a/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_de_DE.properties
@@ -9,5 +9,6 @@ general.settings.language.notify.title = Anzeigesprache ge\u00e4ndert
 general.settings.language.notify.message = Die \u00c4nderung wird erst nach einem Neustart von {0} wirksam.
 general.settings.check.version = \u00dcberpr\u00fcfe nach neuen Versionen
 general.settings.start.fullscreen = Im Vollbildmodus starten
+general.settings.mouse.input = Mauseingabe aktivieren, wenn es zum Beispiel Probleme mit der Stifteingabe gibt
 general.settings.start.maximized = Maximiert starten
 general.settings.tablet.mode = Tabletmodus (Windows)
