reverted buttons in preview minor fixes

--- a/lect-presenter-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -32,6 +32,7 @@ menu.quiz.embedded = Embedded quizzes
 menu.bookmarks = Bookmarks
 menu.bookmarks.clear = Delete all bookmarks
 menu.bookmarks.add = Bookmark current slide
+menu.bookmarks.remove = Remove current slide bookmark
 menu.bookmarks.previous = Go back to previous bookmark
 menu.bookmarks.goto = Go to bookmark
 menu.slide.actions = Slide Links
