editor-fx: fixes the event list by showing the laserpointer again and showing the icon and name for the rubber tool. Bugs from #807 and #806

--- a/lect-editor-fx/src/main/resources/views/page-events/page-events_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/page-events/page-events_de_DE.properties
@@ -17,6 +17,7 @@ page.events.ellipse = Kreis
 page.events.select = Auswahl
 page.events.clone = Kopie
 page.events.rubber = Radiergummi
+page.events.rubber.ext = Radiergummi
 page.events.latex = LaTeX
 page.events.text = Text
 page.events.text.selection = Textauswahl
