--- a/lect-editor-fx/src/main/resources/views/page-events/page-events_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/page-events/page-events_en_US.properties
@@ -17,6 +17,7 @@ page.events.ellipse = Ellipse
 page.events.select = Selection
 page.events.clone = Copy
 page.events.rubber = Erase
+page.events.rubber.ext = Erase
 page.events.latex = LaTeX
 page.events.text = Text
 page.events.text.selection = Text selection
