presenter-api: display audio device connection events with popups

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -1,3 +1,6 @@
+audio.device.connected = Audiogerät verbunden
+audio.device.disconnected = Audiogerät getrennt
+
 bookmark.assign.error = Lesezeichen konnte nicht erstellt werden
 bookmark.delete.error = Lesezeichen konnte nicht gel\u00f6scht werden
 bookmark.goto.error = Lesezeichen konnte nicht angesprungen werden
