--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -1,3 +1,6 @@
+audio.device.connected = Audio device connected
+audio.device.disconnected = Audio device disconnected
+
 bookmark.assign.error = Bookmark could not be created
 bookmark.delete.error = Bookmark could not be deleted
 bookmark.goto.error = Bookmark could not be opened
