presenter: show dialog to remind to start the recording

--- a/lect-core/src/main/resources/i18n/core_de_DE.properties
+++ b/lect-core/src/main/resources/i18n/core_de_DE.properties
@@ -20,6 +20,7 @@ button.browse = Durchsuchen...
 button.submit = Absenden
 button.download = Herunterladen
 button.update = Aktualisieren
+button.record = Aufzeichnen
 
 file.description.pdf = PDF-Folien
 file.description.recording = Vorlesungsaufzeichnung
