--- a/lect-core/src/main/resources/i18n/core_en_US.properties
+++ b/lect-core/src/main/resources/i18n/core_en_US.properties
@@ -20,6 +20,7 @@ button.browse = Browse...
 button.submit = Submit
 button.download = Download
 button.update = Update
+button.record = Record
 
 file.description.pdf = PDF Slides
 file.description.recording = Lecture Recording
