--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -21,6 +21,8 @@ messenger.start.error = Messenger konnte nicht gestartet werden
 messenger.stop.error = Messenger konnte nicht gestoppt werden
 messenger.window.title = Messenger
 
+recording.notification.title = Aufzeichnung
+recording.notification.message = Sind Sie sicher, dass Sie keine Aufzeichnung starten m\u00f6chten?
 recording.discard.error = Aufzeichnung konnte nicht verworfen werden
 recording.restore.missing.backup = Backup existiert nicht
 recording.start.error = Aufzeichnung konnte nicht gestartet werden
