--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -21,6 +21,8 @@ messenger.start.error = Messenger could not be started
 messenger.stop.error = Messenger could not be stopped
 messenger.window.title = Messenger
 
+recording.notification.title = Recording
+recording.notification.message = Are you sure you do not want to start a recording?
 recording.discard.error = Recording could not be discarded
 recording.restore.missing.backup = Backup does not exist
 recording.start.error = Recording could not be started
