presenter: automatically start recording when starting a stream

--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -1,3 +1,4 @@
+stream.settings.record = Record stream automatically
 stream.settings.access.token = Access Token
 stream.settings.server.name = Server
 stream.settings.web.api = Web API
