--- a/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_de_DE.properties
@@ -7,6 +7,7 @@ start.stream.camera.enable = Kamera aktivieren
 start.stream.camera.starting = Starte...
 start.stream.camera.unavailable = Kamera ist nicht verf\u00fcgbar
 start.stream.messenger.enable = Messenger aktivieren
+start.stream.record = Stream aufzeichnen
 start.stream.preview = Stream ansehen
 start.stream.start = Start
 start.stream.settings = Einstellungen
