added commandline support to open documents (#802)
* added commandline support to open documents

* fixes to show Error PopUp

--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -65,6 +65,7 @@ message.slide.create.error = Message slide could not be created
 
 service.timeout.error = The service is currently not available. If the error occurs permanently, please contact your trusted administrator.
 
+open.document = loading document
 open.document.error = Document could not be opened
 open.page.file.error = The file could not be opened
 open.page.uri.error = The link could not be opened
