--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -16,6 +16,8 @@ menu.toolbar.customize = Toolbar anpassen
 menu.external.windows = Externe Fenster
 menu.external.notes = Notizen
 menu.external.notes.disconnected = Notizen (Bildschirm getrennt)
+menu.external.slide.notes = Folien Notizen
+menu.external.slide.notes.disconnected = Folien Notizen (Bildschirm getrennt)
 menu.external.messages = Nachrichten
 menu.external.messages.disconnected = Nachrichten (Bildschirm getrennt)
 menu.external.participants = Teilnehmer:innen
@@ -26,11 +28,13 @@ menu.external.speech = Redebeitrag
 menu.external.speech.disconnected = Redebeitrag (Bildschirm getrennt)
 menu.messages.position = Position der Nachrichten
 menu.notes.position = Position der Notizen
+menu.slide.notes.position = Position der Folien Notizen
 menu.participants.position = Position der Teilnehmer:innen
 menu.preview.position = Position der Folienvorschau
 menu.left = Links
 menu.bottom = Unten
 menu.right = Rechts
+menu.none = Ohne
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Whiteboard erstellen
 menu.grid = Gitternetz ein/ausschalten
@@ -68,3 +72,4 @@ menu.about = \u00DCber
 menu.stopwatch.stop = Stoppuhr zurücksetzen
 menu.stopwatch.pause = Stoppuhr Starten/Anhalten
 menu.stopwatch.config = Stoppuhr Einstellungen
+menu.splitNotes.position = Notiz Folie
