--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -15,6 +15,7 @@ menu.advanced.settings = Advanced settings
 menu.toolbar.customize = Customize toolbar
 menu.external.windows = External windows
 menu.external.notes = Notes
+menu.external.slide.notes = Slide notes
 menu.external.notes.disconnected = Notes (Display disconnected)
 menu.external.messages = Messages
 menu.external.messages.disconnected = Messages (Display disconnected)
@@ -26,11 +27,13 @@ menu.external.speech = Speech
 menu.external.speech.disconnected = Speech (Display disconnected)
 menu.messages.position = Messages position
 menu.notes.position = Notes position
+menu.slide.notes.position = Slide notes position
 menu.participants.position = Participants position
 menu.preview.position = Slide preview position
 menu.left = Left
 menu.bottom = Bottom
 menu.right = Right
+menu.none = None
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Create whiteboard
 menu.grid = Switch grid on/off
@@ -68,3 +71,4 @@ menu.about = About
 menu.stopwatch.stop = reset stopwatch
 menu.stopwatch.pause = start/pause stopwatch
 menu.stopwatch.config = Stopwatch configuration
+menu.splitNotes.position = Notes slide
