--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -63,6 +63,8 @@ menu.quiz.embedded = Embedded quizzes
 menu.bookmarks = Bookmarks
 menu.bookmarks.clear = Delete all bookmarks
 menu.bookmarks.add = Bookmark current slide
+menu.bookmarks.remove = Remove bookmark current slide
+menu.bookmarks.add.default = Bookmark current slide (default shortcut)
 menu.bookmarks.previous = Go back to previous bookmark
 menu.bookmarks.goto = Go to bookmark
 menu.slide.actions = Slide Links
@@ -71,4 +73,6 @@ menu.about = About
 menu.stopwatch.stop = reset stopwatch
 menu.stopwatch.pause = start/pause stopwatch
 menu.stopwatch.config = Stopwatch configuration
+menu.bookmarks.prev = Go to previous bookmark
+menu.bookmarks.next = Go to next bookmark
 menu.splitNotes.position = Notes slide
