--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -1,12 +1,14 @@
 audio.device.connected = Audio device connected
 audio.device.disconnected = Audio device disconnected
 
-bookmark.assign.error = Bookmark could not be created
+bookmark.assign.warning = Bookmark could not be created
 bookmark.delete.error = Bookmark could not be deleted
 bookmark.goto.error = Bookmark could not be opened
 bookmark.key.exists = A bookmark with the key {0} already exists
+bookmark.exists = A bookmark on current page already exists
 bookmark.key.not.existing = A bookmark with the key {0} does not exist
 bookmark.created = New bookmark created: {0}
+bookmark.removed = Bookmark removed: {0}
 
 document.save.error = Document could not be saved
 document.save.lecture = Lecture
