--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -64,16 +64,16 @@ menu.quiz.embedded = Eingebettete Quizzes
 menu.bookmarks = Lesezeichen
 menu.bookmarks.clear = Alle Lesezeichen l\u00F6schen
 menu.bookmarks.add = Aktuelle Folie als Lesezeichen
-menu.bookmarks.remove = Lesezeichen auf aktueller Folie Löschen
-menu.bookmarks.add.default = Aktuelle Folie als Lesezeichen (Standard-Kürzel)
+menu.bookmarks.remove = Lesezeichen auf aktueller Folie L\u00F6schen
+menu.bookmarks.add.default = Aktuelle Folie als Lesezeichen (Standard-K\u00FCrzel)
 menu.bookmarks.previous = Zur\u00FCck zur letzten Position
 menu.bookmarks.goto = Lesezeichen anspringen
 menu.slide.actions = Folienlinks
 menu.log = Log
 menu.about = \u00DCber
-menu.stopwatch.stop = Stoppuhr zurücksetzen
+menu.stopwatch.stop = Stoppuhr zur\u00FCcksetzen
 menu.stopwatch.pause = Stoppuhr Starten/Anhalten
 menu.stopwatch.config = Stoppuhr Einstellungen
 menu.bookmarks.prev = Zum vorherigen Lesezeichen springen
-menu.bookmarks.next = Zum nächsten Lesezeichen springen
+menu.bookmarks.next = Zum n\u00E4chsten Lesezeichen springen
 menu.splitNotes.position = Notiz Folie
