Fixed 'view' menu translations and item order #778

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -16,8 +16,8 @@ menu.toolbar.customize = Toolbar anpassen
 menu.external.windows = Externe Fenster
 menu.external.notes = Notizen
 menu.external.notes.disconnected = Notizen (Bildschirm getrennt)
-menu.external.slide.notes = Folien Notizen
-menu.external.slide.notes.disconnected = Folien Notizen (Bildschirm getrennt)
+menu.external.slide.notes = Notiz-Folien
+menu.external.slide.notes.disconnected = Notiz-Folien (Bildschirm getrennt)
 menu.external.messages = Nachrichten
 menu.external.messages.disconnected = Nachrichten (Bildschirm getrennt)
 menu.external.participants = Teilnehmer:innen
@@ -28,7 +28,7 @@ menu.external.speech = Redebeitrag
 menu.external.speech.disconnected = Redebeitrag (Bildschirm getrennt)
 menu.messages.position = Position der Nachrichten
 menu.notes.position = Position der Notizen
-menu.slide.notes.position = Position der Folien Notizen
+menu.slide.notes.position = Position der Notiz-Folien
 menu.participants.position = Position der Teilnehmer:innen
 menu.preview.position = Position der Folienvorschau
 menu.left = Links
@@ -76,4 +76,4 @@ menu.stopwatch.pause = Stoppuhr Starten/Anhalten
 menu.stopwatch.config = Stoppuhr Einstellungen
 menu.bookmarks.prev = Zum vorherigen Lesezeichen springen
 menu.bookmarks.next = Zum n\u00E4chsten Lesezeichen springen
-menu.splitNotes.position = Notiz Folie
+menu.splitNotes.position = Notiz-Folie
