--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -8,7 +8,7 @@ bookmark.key.exists = Ein Lesezeichen mit der Taste {0} existiert bereits
 bookmark.exists = Ein Lesezeichen auf aktueller Seite existiert bereits
 bookmark.key.not.existing = Ein Lesezeichen mit der Taste {0} existiert nicht
 bookmark.created = Neues Lesezeichen erstellt: {0}
-bookmark.removed = Lesezeichen gelöscht: {0}
+bookmark.removed = Lesezeichen gel\u00f6scht: {0}
 
 document.save.error = Dokument konnte nicht gespeichert werden
 document.save.lecture = Vorlesung
