--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -64,7 +64,7 @@ menu.quiz.embedded = Eingebettete Quizzes
 menu.bookmarks = Lesezeichen
 menu.bookmarks.clear = Alle Lesezeichen l\u00F6schen
 menu.bookmarks.add = Aktuelle Folie als Lesezeichen
-menu.bookmarks.remove = Lesezeichen auf aktueller Folie L\u00F6schen
+menu.bookmarks.remove = Lesezeichen auf aktueller Folie l\u00F6schen
 menu.bookmarks.add.default = Aktuelle Folie als Lesezeichen (Standard-K\u00FCrzel)
 menu.bookmarks.previous = Zur\u00FCck zur letzten Position
 menu.bookmarks.goto = Lesezeichen anspringen
