Fixed note slide positioning

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -31,6 +31,7 @@ menu.notes.position = Position der Notizen
 menu.slide.notes.position = Position der Notiz-Folien
 menu.participants.position = Position der Teilnehmer:innen
 menu.preview.position = Position der Folienvorschau
+menu.preview.bottom = Unter der Folienvorschau
 menu.left = Links
 menu.bottom = Unten
 menu.right = Rechts
