--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -30,6 +30,7 @@ menu.notes.position = Notes position
 menu.slide.notes.position = Slide notes position
 menu.participants.position = Participants position
 menu.preview.position = Slide preview position
+menu.preview.bottom = Below the slide preview
 menu.left = Left
 menu.bottom = Bottom
 menu.right = Right
